attempted fix on double scroll bar

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -8,7 +8,7 @@ body {
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory; */
   /* scroll-snap-align: center; */
-  overflow: hidden auto;
+  /* overflow: hidden auto; */
   background-size: cover;
   background-attachment: fixed;
   /* background-position: center; */
